# conversational_intelligence

./: .env.example  .gitignore  README.md  config.yaml  constraints.txt  pyproject.toml  requirements.txt
data/reference/: reference.json
docs/: diagram.mmd  pipeline_report.md  report.md
notebooks/: run_in_colab.ipynb
outputs/: eval.json  result.json
scripts/: inspect_result.py  render_diagram.py  report_to_pdf.py
src/mmi/: __init__.py  config.py  evaluate.py  fusion.py  ingest.py  intelligence.py  run.py  schemas.py  speech.py  utils.py  vision.py
tests/: test_pipeline_offline.py
