[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mmi-pipeline"
version = "0.1.0"
description = "Multimodal Meeting Intelligence Pipeline (Speech + CV + LLM)"
requires-python = ">=3.10,<3.13"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mmi = "mmi.run:main"
